updated server.js, product.js, user.js
